draft structure of the body secs

--- a/index.html
+++ b/index.html
@@ -9,27 +9,19 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <div class="header">
-            <li>About</li>
-            <li>Education &amp; Experience</li>
-            <li>Skills</li>
-            <li>Contact</li>
-        </div>
-    </header>
     <nav class="sidebar">
         <div class="profile">
             <div class="profile__image">
-                <img src="./images/portpic.jpg" alt="Maria Elena Ohara Rosa de Ortega">
+                <img class="pic" src="./images/portpic.jpg" alt="Maria Elena Ohara Rosa de Ortega">
             </div>
             <h2 class="sidebar__name">Maria Elena Rosa De Ortega</h2>
             <h3 class="sidebar__title">PhD Candidate</h3>
         </div>
         <ul>
-            <li class="nav__link"><a href="#">About Me</a></li>
-            <li class="nav__link"><a href="#">Education &amp; Experience</a></li>
-            <li class="nav__link"><a href="#">Skills</a></li>
-            <li class="nav__link"><a href="#">Contact Me</a></li>
+            <li class="nav__link"><a href="#about">About Me</a></li>
+            <li class="nav__link"><a href="#edex">Education &amp; Experience</a></li>
+            <li class="nav__link"><a href="#skills">Skills</a></li>
+            <li class="nav__link"><a href="#contact">Contact Me</a></li>
         </ul>
         <div class="socials">
             <ul>
@@ -39,7 +31,53 @@
         </div>
     </nav>
     <main>
+        <section class="top">
+            <div class="top__overlay"></div>
+            <div class="top__text">
+                <h2></h2>
+                <h5></h5>
+            </div>
+        </section>
+        <section class="about" id="about">
+            <h2 class="about__title"> About Me</h2>
+            <p class="about__text">
 
+            </p>
+            <hr class="about__line">
+        </section>
+        <section class="edex">
+            <h1>Education &amp; Experience</h1>
+            <div class="edex__wrapper" id="edex">
+                <div class="edex__ed">
+                    <h2 class="edex__title">Education</h2>
+                    <ul>
+
+                    </ul>
+                </div>
+                <div class="edex__ex">
+                    <h2 class="edex__title">Experience</h2>
+                    <ul>
+
+                    </ul>
+                </div>
+            </div>
+            <hr class="about__line">
+        </section>
+        <section class="skills">
+            <h2 class="skills__title" id="skills">Skills</h2>
+            <div class="skills__wrapper" >
+                <ul>
+
+                </ul>
+            </div>
+        </section>
+        <section class="contact" >
+            <h2 class="contact__title" id="contact">Contact Me</h2>
+            <div>
+
+            </div>
+
+        </section>
     </main>
     <footer>
 
