--- a/index.html
+++ b/index.html
@@ -6,77 +6,41 @@
     <script src="https://kit.fontawesome.com/454aa3a876.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/normalize.css">
-    <title>Document</title>
+    <title>Elena's Portfolio</title>
 </head>
 <body>
-    <nav class="sidebar">
-        <div class="profile">
-            <div class="profile__image">
-                <img class="pic" src="./images/portpic.jpg" alt="Maria Elena Ohara Rosa de Ortega">
-            </div>
-            <h2 class="sidebar__name">Maria Elena Rosa De Ortega</h2>
-            <h3 class="sidebar__title">PhD Candidate</h3>
-        </div>
-        <ul>
-            <li class="nav__link"><a href="#about">About Me</a></li>
-            <li class="nav__link"><a href="#edex">Education &amp; Experience</a></li>
-            <li class="nav__link"><a href="#skills">Skills</a></li>
-            <li class="nav__link"><a href="#contact">Contact Me</a></li>
-        </ul>
-        <div class="socials">
+    <header class="header">
+        <nav class="nav">
             <ul>
-                <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
+                <li class="nav__link"><a href="#about">About Me</a></li>
+                <li class="nav__link"><a href="#edex">Education &amp; Experience</a></li>
+                <li class="nav__link"><a href="#skills">Skills</a></li>
+                <li class="nav__link"><a href="#contact">Contact Me</a></li>
             </ul>
-        </div>
-    </nav>
-    <main>
-        <section class="top">
-            <div class="top__overlay"></div>
-            <div class="top__text">
-                <h2></h2>
-                <h5></h5>
-            </div>
-        </section>
-        <section class="about" id="about">
-            <h2 class="about__title"> About Me</h2>
-            <p class="about__text">
-
-            </p>
-            <hr class="about__line">
-        </section>
-        <section class="edex">
-            <h1>Education &amp; Experience</h1>
-            <div class="edex__wrapper" id="edex">
-                <div class="edex__ed">
-                    <h2 class="edex__title">Education</h2>
-                    <ul>
-
-                    </ul>
-                </div>
-                <div class="edex__ex">
-                    <h2 class="edex__title">Experience</h2>
-                    <ul>
-
-                    </ul>
-                </div>
-            </div>
-            <hr class="about__line">
-        </section>
-        <section class="skills">
-            <h2 class="skills__title" id="skills">Skills</h2>
-            <div class="skills__wrapper" >
+            <div class="socials">
                 <ul>
-
+                    <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
                 </ul>
+            </div> 
+        </nav>
+    </header>
+    <main>
+        <section class="profile">
+            <div class="profile__wrapper">
+                <div class="profile__image">
+                    <img class="pic" src="./images/portpic.jpg" alt="Maria Elena Rosa Ortega de Ohara">
+                    <h2 class="sidebar__name">Mari&#769;a Elena Rosa Ortega de Ohara</h2>
+                    <h3 class="sidebar__title">PhD Candidate</h3> 
+                </div>
+                <div class="profile__text">
+                    <p>I fluently speak Spanish, English, French and Japanese. 
+                       I have experience teaching secondary, university and adult students. 
+                       As a dedicated educator, I aim to foster an inclusive and supportive 
+                       learning environment where diversity is recognised and celebrated. 
+                    </p>
+                </div>
             </div>
-        </section>
-        <section class="contact" >
-            <h2 class="contact__title" id="contact">Contact Me</h2>
-            <div>
-
-            </div>
-
         </section>
     </main>
     <footer>
