--- a/index.html
+++ b/index.html
@@ -10,19 +10,15 @@
 </head>
 <body>
     <header class="header">
+        <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara</h1>
         <nav class="nav">
-            <ul>
+            <ul class="nav__list">
                 <li class="nav__link"><a href="#about">About Me</a></li>
-                <li class="nav__link"><a href="#edex">Education &amp; Experience</a></li>
-                <li class="nav__link"><a href="#skills">Skills</a></li>
+                <li class="nav__link"><a href="#ed">Education</a></li>
+                <li class="nav__link"><a href="#ex">Professional Experience</a></li>
+                <li class="nav__link"><a href="#skills">Professional Development &amp; Awards</a></li>
                 <li class="nav__link"><a href="#contact">Contact Me</a></li>
             </ul>
-            <div class="socials">
-                <ul>
-                    <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                    <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
-                </ul>
-            </div> 
         </nav>
     </header>
     <main>
@@ -44,7 +40,12 @@
         </section>
     </main>
     <footer>
-
+        <div class="socials">
+            <ul>
+                <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
+            </ul>
+        </div> 
     </footer>
 </body>
 </html>
