tried sidenav and changed profile pic src

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./style/normalize.css">
     <title>Elena's Portfolio</title>
 </head>
-<body>
-    <header class="header">
+<body> 
+    <!--
+   <header class="header">
         <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara</h1>
         <nav class="nav">
             <ul class="nav__list">
@@ -46,6 +47,20 @@
                 <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
             </ul>
         </div> 
-    </footer>
+    </footer>-->
+
+    <!--sidenav-->
+    <div class="sidenav">
+        <a href="#">About</a>
+        <a href="#">Education</a>
+        <a href="#">Experience</a>
+        <a href="#">Professional Development and Awards</a>
+        <a href="#">Contact Me</a>
+    </div>
+
+    <!--Page content-->
+    <div class="main">
+
+    </div>
 </body>
 </html>
