--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 
     <!--sidenav-->
     <div class="sidenav">
+        <div class="sidenav__profile">
+            <img class="sidenav__pic" src="./images/portpic.jpg" alt="Maria Elena Rosa Ortega de Ohara">
+        </div>
         <a href="#">About</a>
         <a href="#">Education</a>
         <a href="#">Experience</a>
