--- a/pages/education.html
+++ b/pages/education.html
@@ -21,4 +21,14 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="bio">
+            <h1 class="bio__title">Education</h1>
+            <div class="bio__box">
+                
+
+            </div>
+
+        </div>
+    </main>
 </body>
