--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
     <title>Elena's Portfolio</title>
 </head>
 <body> 
-    <!--
    <header class="header">
-        <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara</h1>
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__link"><a href="#about">About Me</a></li>
-                <li class="nav__link"><a href="#ed">Education</a></li>
-                <li class="nav__link"><a href="#ex">Professional Experience</a></li>
-                <li class="nav__link"><a href="#skills">Professional Development &amp; Awards</a></li>
-                <li class="nav__link"><a href="#contact">Contact Me</a></li>
-            </ul>
-        </nav>
+        <div class="header__wrapper">
+            <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__link"><a href="#about">About Me</a></li>
+                    <li class="nav__link"><a href="#ed">Education</a></li>
+                    <li class="nav__link"><a href="#ex">Professional Experience</a></li>
+                    <li class="nav__link"><a href="#skills">Professional Development &amp; Awards</a></li>
+                    <li class="nav__link"><a href="#contact">Contact Me</a></li>
+                </ul>
+            </nav>
+        </div>
+        <hr>
     </header>
     <main>
         <section class="profile">
@@ -30,40 +32,27 @@
                     <h2 class="sidebar__name">Mari&#769;a Elena Rosa Ortega de Ohara</h2>
                     <h3 class="sidebar__title">PhD Candidate</h3> 
                 </div>
-                <div class="profile__text">
-                    <p>I fluently speak Spanish, English, French and Japanese. 
-                       I have experience teaching secondary, university and adult students. 
-                       As a dedicated educator, I aim to foster an inclusive and supportive 
-                       learning environment where diversity is recognised and celebrated. 
-                    </p>
+                    <div class="profile__text">
+                        <p>I fluently speak Spanish, English, French and Japanese. 
+                        I have experience teaching secondary, university and adult students. 
+                        As a dedicated educator, I aim to foster an inclusive and supportive 
+                        learning environment where diversity is recognised and celebrated. 
+                        </p>
+                    </div>
+                    <button>Download Resume PDF</button>
                 </div>
-            </div>
         </section>
     </main>
     <footer>
-        <div class="socials">
-            <ul>
-                <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
-            </ul>
+        <div>
+            <p>&#169;2024 by Megumi Ohara</p>
+            <div class="socials">
+                <ul>
+                    <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
+                </ul>
+            </div>
         </div> 
-    </footer>-->
-
-    <!--sidenav-->
-    <div class="sidenav">
-        <div class="sidenav__profile">
-            <img class="sidenav__pic" src="./images/portpic.jpg" alt="Maria Elena Rosa Ortega de Ohara">
-        </div>
-        <a href="#">About</a>
-        <a href="#">Education</a>
-        <a href="#">Experience</a>
-        <a href="#">Professional Development and Awards</a>
-        <a href="#">Contact Me</a>
-    </div>
-
-    <!--Page content-->
-    <div class="main">
-
-    </div>
+    </footer>
 </body>
 </html>
