--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <title>Elena's Portfolio</title>
 </head>
 <body> 
-   <header class="header">
+    <header class="header">
         <div class="header__wrapper">
             <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__link"><a href="#about">About Me</a></li>
-                    <li class="nav__link"><a href="#ed">Education</a></li>
-                    <li class="nav__link"><a href="#ex">Professional Experience</a></li>
-                    <li class="nav__link"><a href="#skills">Professional Development &amp; Awards</a></li>
-                    <li class="nav__link"><a href="#contact">Contact Me</a></li>
+                    <li class="nav__link"><a href="/index.html">About Me</a></li>
+                    <li class="nav__link"><a href="/pages/resume.html">Resume</a></li>
+                    <li class="nav__link"><a href="./pages/development.html">Professional Development &amp; Awards</a></li>
+                    <li class="nav__link"><a href="/pages/contact.html">Contact Me</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,6 +40,12 @@
                     </div>
                     <button>Download Resume PDF</button>
                 </div>
+        </section>
+        <section class="phd">
+            <div class="phd__wrapper">
+                <p>Description of the Phd research</p>
+            </div>
+
         </section>
     </main>
     <footer>
