changed theme colors

--- a/pages/development.html
+++ b/pages/development.html
@@ -26,8 +26,8 @@
     <main>
         <section class="dev">
             <div class="dev__wrapper">
-                <h3>Professional Development</h3>
-                <ul>
+                <h3 class="dev__title">Professional Development</h3>
+                <ul class="dev__list">
                     <li>
                         Years 7-10 Australian Curriculum V9.0: 
                         Languages-Community of practice by QCAA. (2024). 
