--- a/pages/resume.html
+++ b/pages/resume.html
@@ -27,7 +27,7 @@
         <section class="ed">
             <h2 class="ed__title">Education</h2>
             <div class="ed__box">
-                <ul>
+                <ul class="ed__list">
                     <li>
                         Candidate of Doctor Philosophy in Sociology of Education
                         <p>James Cook University, Australia</p>
