--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <script src="https://kit.fontawesome.com/454aa3a876.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/index.css">
     <link rel="stylesheet" href="./style/normalize.css">
+    
     <title>Elena's Portfolio</title>
 </head>
 <body> 
-    <header class="header">
+    <header class="header" id="navBar">
         <div class="header__wrapper">
             <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
             <nav class="nav">
@@ -59,5 +60,7 @@
             </div>
         </div> 
     </footer>
+    
+    <script src="/src/script1.js"></script>
 </body>
 </html>
