--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,6 +6,7 @@
     <script src="https://kit.fontawesome.com/454aa3a876.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="./style/normalize.css">
+    <script src="/src/script1.js"></script>
     <title>Elena's Portfolio</title>
 </head>
 <body>
