--- a/pages/resume.html
+++ b/pages/resume.html
@@ -6,18 +6,17 @@
     <script src="https://kit.fontawesome.com/454aa3a876.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="./style/normalize.css">
-    <script src="/src/script1.js"></script>
     <title>Elena's Portfolio</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="navBar">
         <div class="header__wrapper">
             <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__link"><a href="/index.html">About Me</a></li>
                     <li class="nav__link"><a href="/pages/resume.html">Resume</a></li>
-                    <li class="nav__link"><a href="./development.html">Professional Development &amp; Awards</a></li>
+                    <li class="nav__link"><a href="./pages/development.html">Professional Development &amp; Awards</a></li>
                     <li class="nav__link"><a href="/pages/contact.html">Contact Me</a></li>
                 </ul>
             </nav>
@@ -136,5 +135,8 @@
             </div>
         </div> 
     </footer>
+
+    <script src="/src/script1.js"></script>
+
 </body>
 </html>
