first draft profile done.
started phd section

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -11,12 +11,12 @@
 <body>
     <header class="header" id="navBar">
         <div class="header__wrapper">
-            <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
+            <div class="header__title">Maria Elena Rosa Ortega de Ohara<span class="header__span">,Phd Candidate</span></div>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__link"><a href="/index.html">About Me</a></li>
                     <li class="nav__link"><a href="/pages/resume.html">Resume</a></li>
-                    <li class="nav__link"><a href="./pages/development.html">Professional Development &amp; Awards</a></li>
+                    <li class="nav__link"><a href="/pages/development.html">Professional Development &amp; Awards</a></li>
                     <li class="nav__link"><a href="/pages/contact.html">Contact Me</a></li>
                 </ul>
             </nav>
