--- a/pages/development.html
+++ b/pages/development.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header" id="navBar">
         <div class="header__wrapper">
-            <h1 class="header__title">Mari&#769;a Elena Rosa Ortega De Ohara , <span class="header__span">Phd Candidate</span></h1>
+            <div class="header__title">Maria Elena Rosa Ortega de Ohara<span class="header__span">,Phd Candidate</span></div>
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__link"><a href="/index.html">About Me</a></li>
