draft on phd section done

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 
            </div>
            <div class="phd__images">
-                <img alt="img1">
-                <img alt="img2">
-                <img alt="img3">
+                <img src="/images/children_book.jpg" alt="img1">
+                <img src="/images/children_book.jpg" alt="img2">
+                <img src="/images/children_book.jpg" alt="img3">
             </div>
 
         </section>
