--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                 <button>Download Resume PDF</button>
         </section>
         <section class="phd">
-            
             <div class="phd__wrapper">
-                <h1>Phd Research Topic</h1>
-                <p>Description of the Phd research. Body text for your whole article or post. 
-                    We’ll put in some lorem ipsum to show how a filled-out page might look:
-                    Excepteur efficient emerging, minim veniam anim aute carefully curated Ginza 
-                    conversation exquisite perfect nostrud nisi intricate Content. Qui  international
-                    first-class nulla ut. Punctual adipisicing, essential lovely queen tempor eiusmod 
-                    irure. Exclusive izakaya charming Scandinavian impeccable aute quality of life 
-                    soft power pariatur Melbourne occaecat discerning. Qui wardrobe aliquip, et 
-                    Porter destination Toto remarkable officia Helsinki excepteur Basset hound. 
-                    Zürich sleepy perfect consectetur.ation aute Rochester id. Qui acific laboris.
-                </p>
-                
+                <div class="phd__text">
+                    <h1>Phd Research Topic</h1>
+                    <p>Description of the Phd research. Body text for your whole article or post. 
+                        We’ll put in some lorem ipsum to show how a filled-out page might look:
+                        Excepteur efficient emerging, minim veniam anim aute carefully curated Ginza 
+                        conversation exquisite perfect nostrud nisi intricate Content. Qui  international
+                        first-class nulla ut. Punctual adipisicing, essential lovely queen tempor eiusmod 
+                        irure. Exclusive izakaya charming Scandinavian impeccable aute quality of life 
+                        soft power pariatur Melbourne occaecat discerning. Qui wardrobe aliquip, et 
+                        Porter destination Toto remarkable officia Helsinki excepteur Basset hound. 
+                        Zürich sleepy perfect consectetur.ation aute Rochester id. Qui acific laboris.
+                    </p>
+                </div>
            </div>
            <div class="phd__images">
                 <img src="/images/children_book.jpg" alt="img1">
@@ -65,6 +65,19 @@
                 <img src="/images/children_book.jpg" alt="img3">
             </div>
 
+        </section>
+        <section class="pub">
+            <div class="pub__wrapper">
+                <div class="pub__text">
+                    <h1>Publication</h1>
+                    <h3>Coming Soon!</h3>
+                        <p>I am currently working on a french language book!</p>
+                        <p>coming 2025</p>
+                </div>
+                <div class="pub__image">
+                    <img src="/images/girl_inbook.jpg" alt="language book">
+                </div>
+            </div>
         </section>
     </main>
     <footer>
