started footer styling

--- a/index.html
+++ b/index.html
@@ -79,16 +79,19 @@
                 </div>
             </div>
         </section>
+        <section class="image__wrapper">
+            <span>background image</span>
+        </section>
     </main>
     <footer>
-        <div>
-            <p>&#169;2024 by Megumi Ohara</p>
-            <div class="socials">
-                <ul>
+        <div class="footer"> 
+            <div class="footer__nav">
+                <ul class="footer__socials">
                     <li class="socials__links"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                     <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
                 </ul>
-            </div>
+            </div> 
+            <p>&#169;2024 by Megumi Ohara</p>
         </div> 
     </footer>
 
