--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <li class="socials__links"><a href="#"><i class="fa-regular fa-envelope"></i></a></li>
                 </ul>
             </div> 
-            <p>&#169;2024 by Megumi Ohara</p>
+            <p class="footer__c">&#169;2024 by Megumi Ohara</p>
         </div> 
     </footer>
 
